--- a/docs/_includes/head.html
+++ b/docs/_includes/head.html
@@ -1,5 +1,5 @@
 <head>
-    <title>Arbre | HTML Views in Ruby</title>
+    <title>Arbo | HTML Views in Ruby</title>
     <link href='//fonts.googleapis.com/css?family=Yanone+Kaffeesatz:extralight,light,regular,bold' rel='stylesheet' type='text/css'>
     <link href='//fonts.googleapis.com/css?family=Droid+Sans+Mono' rel='stylesheet' type='text/css'>
     <link href="{{ site.baseurl }}/stylesheets/main.css" media="screen" rel="stylesheet" type="text/css" />
