--- a/docs/_includes/top-menu.html
+++ b/docs/_includes/top-menu.html
@@ -1,8 +1,8 @@
 <div id="header">
-    <h1><a href="{{ site.baseurl }}/index.html"><span>Arbre</span></a></h1>
+    <h1><a href="{{ site.baseurl }}/index.html"><span>Arbo</span></a></h1>
 
     <div id="nav">
         <!-- a href="{{ site.baseurl }}/documentation.html">Documentation</a -->
-        <a href="http://github.com/activeadmin/arbre">Get the Code</a>
+        <a href="http://github.com/varyonic/arbo">Get the Code</a>
     </div>
 </div>
